Add deep-dive second-pass findings to security audit
Second pass analyzing obfuscated secrets (all Base64/hex decoded), hidden
backdoors (reflection, classloaders, native code, hidden threads, file
watchers, time bombs), covert data channels (DNS exfil, steganography,
timing side channels), and supply chain risks (unofficial signal-service
fork, missing dependency verification, Gradle wrapper checksum, CI
permissions). Repository verified as unmodified upstream. All deep-dive
categories came back clean except supply chain concerns.

https://claude.ai/code/session_017V6zcpuLfxW3r7urA3LbVj